# CodingBridge

./: .env.example  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yml
coding_bridge/: __init__.py  __main__.py  capabilities.py  cli.py  config.py  connection.py  history.py  locking.py  logs.py  pairing.py  permissions.py  protocol.py  session.py  store.py
coding_bridge/providers/: __init__.py  base.py  claude.py  codex.py  copilot.py
coding_bridge_agent/: __main__.py  attachments.py  capabilities.py  cli.py  config.py  connection.py  fs.py  history.py  images.py  locking.py  logs.py  permissions.py  protocol.py  session.py  session_meta.py
coding_bridge_agent/providers/: __init__.py  base.py  claude.py  codex.py
docs/design/: reliable-event-delivery.md
tests/: conftest.py  test_ask_user_question.py  test_attachments.py  test_capabilities.py  test_codex.py  test_config.py  test_connection.py  test_copilot.py  test_edit_fork.py  test_fs.py  test_history.py  test_images.py  test_locking.py  test_outbox.py  test_pairing.py  test_permissions.py  test_protocol.py  test_resume_guard.py  test_session.py  test_session_meta.py  test_slash_commands.py  test_store.py  test_streaming.py
