[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-bridge-agent"
version = "0.1.0"
description = "Node daemon for AceDataCloud Coding Bridge — run Claude Code on your own machine and drive it from the web."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "AceDataCloud", email = "dev@acedata.cloud" }]
keywords = ["claude", "claude-code", "coding-agent", "remote", "websocket", "acedatacloud"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "websockets>=12,<14",
    "httpx>=0.27,<0.29",
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
qr = ["qrcode>=7.4"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "qrcode>=7.4",
]

[project.scripts]
coding-bridge-agent = "coding_bridge_agent.cli:main"

[project.urls]
Homepage = "https://github.com/AceDataCloud/CodingBridgeAgent"
Issues = "https://github.com/AceDataCloud/CodingBridgeAgent/issues"

[tool.hatch.build.targets.wheel]
packages = ["coding_bridge_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
